Fix icon not showing

--- a/src/component/ElectoralSystem.css
+++ b/src/component/ElectoralSystem.css
@@ -91,7 +91,7 @@ img {
   margin: auto;
   padding-left: 10px;
   padding-right: 10px;
-  width: 20px;
+  width: 40px;
   vertical-align: middle;
 }
 
